# automation-auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  rubric.json
audit/report_onpeer_generated/: audit_report.md
audit/report_onself_generated/: audit_report.md
src/: graph.py  llm.py  main.py  state.py
src/nodes/: aggregator.py  detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
